Learning progress update on 24/06/2024
- Understanding Features (corners, SIFT, SURF, FAST, ORB, ...)
- Matching features (brute-force, FLANN - only know that it is fast when working with large dataset, do not know much about the algorithms)
- Homography (ongoing)

--- a/features-detection-description/homography.ipynb
+++ b/features-detection-description/homography.ipynb
@@ -15,16 +15,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SIFT\n",
-    "\n",
-    "SIFT là thuật toán xác định các keypoint trong ảnh thỏa mãn tính chất shift-invariant, rotate-invariant, scale-invariant. Đồng thời, thuật toán cũng cung cấp cách thức miêu tả keypoint, hỗ trợ việc ghép cặp keypoint giữa các ảnh với nhau.\n",
-    "\n",
-    "Thuật toán có thể tóm gọn bao gồm một số các bước sau:\n",
-    "1. **Scale-space extrema detection** - \n",
-    "2. **Accurate keypoint localization** - \n",
-    "3. **Orientation assignment** - \n",
-    "4. **Keypoint descriptor** -\n",
-    "5. **Keypoint Matching** - "
+    "## Homography\n",
+    "\n"
    ]
   }
  ],
